Fix issues with race images on small screens

--- a/src/app/races/races.component.scss
+++ b/src/app/races/races.component.scss
@@ -13,3 +13,9 @@
 .card-img-top {
     max-height: 16.9rem;
 }
+
+@media screen and (max-width: 1100px) {
+    .card-img-top {
+        max-height: 9.5rem;
+    }
+}
